--- a/src/main/resources/templates/manager/team.html
+++ b/src/main/resources/templates/manager/team.html
@@ -6,7 +6,7 @@
 <div class="container main">
     <h2 th:text="${team.name}"></h2>
     <h6>Spēlētāji</h6>
-    <table class="table table-striped">
+    <table class="table table-striped table-bordered">
         <thead>
         <tr>
             <th>Vārds</th>
