--- a/src/main/resources/templates/organizer/tournament.html
+++ b/src/main/resources/templates/organizer/tournament.html
@@ -11,7 +11,7 @@
             <a class="btn btn-info float-right" th:href="@{'/organizer/tournaments/'+${tournament.id}+'/editTeams'}">Pievienot/Noņemt
                 komandas</a>
         </div>
-        <table class="table">
+        <table class="table table-striped table-bordered">
             <thead>
             <tr>
                 <th>Komandas nosaukums</th>
@@ -28,7 +28,7 @@
         <h6>Spēļu kalendārs</h6>
         <a class="btn btn-info float-right" th:href="@{'/organizer/tournaments/'+${tournament.id}+'/createGame'}">Pievienot
             spēli</a>
-        <table class="table">
+        <table class="table table-striped table-bordered">
             <thead>
             <tr>
                 <th>Mājas komanda</th>
