--- a/src/main/resources/templates/protocolist/protocolForm.html
+++ b/src/main/resources/templates/protocolist/protocolForm.html
@@ -8,7 +8,7 @@
         <form role="form" th:action="@{'/protocolist/game/'+${game.id}+'/addProtocol'}" th:object="${protocol}"
               th:method="post">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-lg-6">
                     <h4 th:text="${homeTeam.name}"></h4>
                     <input type="hidden" th:field="*{id}"/>
                     <input type="hidden" th:name="game" th:id="game" th:value="${game.id}"/>
@@ -63,7 +63,7 @@
                     <p class="pError bg-danger" th:if="${#fields.hasErrors('homeTeamPlayerStats')}"
                        th:errors="*{homeTeamPlayerStats}"></p>
                 </div>
-                <div class="col-md-6">
+                <div class="col-lg-6">
                     <h4 th:text="${awayTeam.name}"></h4>
                     <table id="awayTeamPlayers" class="table table-striped">
                         <thead>
