--- a/src/main/resources/templates/tournament.html
+++ b/src/main/resources/templates/tournament.html
@@ -7,7 +7,7 @@
     <div class="container info">
         <h4 th:text="${tournament.name}"></h4>
         <h6>Komandas</h6>
-        <table class="table">
+        <table class="table table-striped table-bordered">
             <thead>
             <tr>
                 <th>Komandas nosaukums</th>
@@ -17,6 +17,9 @@
             <tbody>
             <tr th:each="team:${tournament.teams}">
                 <td th:text="${team.name}"></td>
+                <td>
+                    <a class="btn btn-info" th:href="@{'/teams/'+${team.id}}">Komandas informācija</a>
+                </td>
             </tr>
             </tbody>
         </table>
@@ -24,12 +27,14 @@
         <hr>
 
         <h6>Spēļu kalendārs</h6>
-        <table class="table">
+        <table class="table table-striped table-bordered">
             <thead>
             <tr>
                 <th>Mājas komanda</th>
                 <th>Viesu komanda</th>
                 <th>Datums</th>
+                <th>Rezultāts</th>
+                <th></th>
             </tr>
             </thead>
             <tbody>
@@ -37,6 +42,11 @@
                 <td th:text="${game.homeTeam.name}"></td>
                 <td th:text="${game.awayTeam.name}"></td>
                 <td th:text="${#dates.format(game.date, 'dd-MM-yyyy HH:mm')}"></td>
+                <td th:text="${game.getHomeTeamGoals()}+' : '+${game.getAwayTeamGoals()}"></td>
+                <td>
+                    <a class="btn btn-info" th:if="${game.ended}"
+                       th:href="@{'/tournaments/'+${tournament.id}+'/game/'+${game.id}}">Spēles protokols</a>
+                </td>
             </tr>
             </tbody>
         </table>
