--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -6,11 +6,11 @@
 <div class="container main">
     <div class="container">
         <div class="row cards">
-            <a href="/admin/editOrganizer" class="card col-lg-6">
+            <a href="/admin/editRoles" class="card col-lg-6">
                 <div>
                     <i class="fas fa-user-edit card-img-top fa-9x"></i>
                     <div class="card-body">
-                        <h3>Pievienot/Noņemt turnīra organizatoru</h3>
+                        <h3>Pārvaldīt lietotāju lomas</h3>
                     </div>
                 </div>
             </a>
@@ -19,14 +19,6 @@
                     <i class="fas fa-database card-img-top fa-9x"></i>
                     <div class="card-body">
                         <h3>H2 datubāzes konsole</h3>
-                    </div>
-                </div>
-            </a>
-            <a href="/admin/addManager" class="card col-lg-6">
-                <div>
-                    <i class="fas fa-users-cog card-img-top fa-9x"></i>
-                    <div class="card-body">
-                        <h3>Pievienot komandas menedžeri</h3>
                     </div>
                 </div>
             </a>
